--- a/Q_Table.ipynb
+++ b/Q_Table.ipynb
@@ -6,7 +6,7 @@
       "name": "Q-Table.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOwHoYNaZ41rqQYm1aeZSI7",
+      "authorship_tag": "ABX9TyMje/impKRhUJ7iWi19u657",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "edA_5MufDAp9",
-        "outputId": "458584f5-0fa1-4731-9493-90019c11d6e4"
+        "outputId": "da28c59e-5fac-4073-c7ee-4e04f505705f"
       },
       "source": [
         "!pip install tensorflow==1.14"
@@ -55,42 +55,42 @@
           "text": [
             "Collecting tensorflow==1.14\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/de/f0/96fb2e0412ae9692dbf400e5b04432885f677ad6241c088ccc5fe7724d69/tensorflow-1.14.0-cp36-cp36m-manylinux1_x86_64.whl (109.2MB)\n",
-            "\u001b[K     |████████████████████████████████| 109.2MB 50kB/s \n",
-            "\u001b[?25hRequirement already satisfied: google-pasta>=0.1.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (0.2.0)\n",
-            "Collecting tensorflow-estimator<1.15.0rc0,>=1.14.0rc0\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3c/d5/21860a5b11caf0678fbc8319341b0ae21a07156911132e0e71bffed0510d/tensorflow_estimator-1.14.0-py2.py3-none-any.whl (488kB)\n",
-            "\u001b[K     |████████████████████████████████| 491kB 54.5MB/s \n",
-            "\u001b[?25hCollecting keras-applications>=1.0.6\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/71/e3/19762fdfc62877ae9102edf6342d71b28fbfd9dea3d2f96a882ce099b03f/Keras_Applications-1.0.8-py3-none-any.whl (50kB)\n",
-            "\u001b[K     |████████████████████████████████| 51kB 6.0MB/s \n",
-            "\u001b[?25hRequirement already satisfied: wrapt>=1.11.1 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.12.1)\n",
-            "Requirement already satisfied: grpcio>=1.8.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.32.0)\n",
+            "\u001b[K     |████████████████████████████████| 109.2MB 87kB/s \n",
+            "\u001b[?25hCollecting tensorboard<1.15.0,>=1.14.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/91/2d/2ed263449a078cd9c8a9ba50ebd50123adf1f8cfbea1492f9084169b89d9/tensorboard-1.14.0-py3-none-any.whl (3.1MB)\n",
+            "\u001b[K     |████████████████████████████████| 3.2MB 59.7MB/s \n",
+            "\u001b[?25hRequirement already satisfied: keras-preprocessing>=1.0.5 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.1.2)\n",
             "Requirement already satisfied: astor>=0.6.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (0.8.1)\n",
             "Requirement already satisfied: absl-py>=0.7.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (0.10.0)\n",
-            "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.1.0)\n",
+            "Requirement already satisfied: wrapt>=1.11.1 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.12.1)\n",
             "Requirement already satisfied: gast>=0.2.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (0.3.3)\n",
+            "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.1.0)\n",
+            "Requirement already satisfied: grpcio>=1.8.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.32.0)\n",
+            "Requirement already satisfied: google-pasta>=0.1.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (0.2.0)\n",
             "Requirement already satisfied: protobuf>=3.6.1 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (3.12.4)\n",
-            "Requirement already satisfied: numpy<2.0,>=1.14.5 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.19.5)\n",
-            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (0.36.2)\n",
             "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.15.0)\n",
-            "Requirement already satisfied: keras-preprocessing>=1.0.5 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.1.2)\n",
-            "Collecting tensorboard<1.15.0,>=1.14.0\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/91/2d/2ed263449a078cd9c8a9ba50ebd50123adf1f8cfbea1492f9084169b89d9/tensorboard-1.14.0-py3-none-any.whl (3.1MB)\n",
-            "\u001b[K     |████████████████████████████████| 3.2MB 39.5MB/s \n",
-            "\u001b[?25hRequirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras-applications>=1.0.6->tensorflow==1.14) (2.10.0)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.6.1->tensorflow==1.14) (53.0.0)\n",
-            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.6/dist-packages (from tensorboard<1.15.0,>=1.14.0->tensorflow==1.14) (1.0.1)\n",
+            "Collecting keras-applications>=1.0.6\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/71/e3/19762fdfc62877ae9102edf6342d71b28fbfd9dea3d2f96a882ce099b03f/Keras_Applications-1.0.8-py3-none-any.whl (50kB)\n",
+            "\u001b[K     |████████████████████████████████| 51kB 3.5MB/s \n",
+            "\u001b[?25hCollecting tensorflow-estimator<1.15.0rc0,>=1.14.0rc0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3c/d5/21860a5b11caf0678fbc8319341b0ae21a07156911132e0e71bffed0510d/tensorflow_estimator-1.14.0-py2.py3-none-any.whl (488kB)\n",
+            "\u001b[K     |████████████████████████████████| 491kB 50.1MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy<2.0,>=1.14.5 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (1.19.5)\n",
+            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.14) (0.36.2)\n",
             "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.6/dist-packages (from tensorboard<1.15.0,>=1.14.0->tensorflow==1.14) (3.3.3)\n",
+            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard<1.15.0,>=1.14.0->tensorflow==1.14) (53.0.0)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.6/dist-packages (from tensorboard<1.15.0,>=1.14.0->tensorflow==1.14) (1.0.1)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras-applications>=1.0.6->tensorflow==1.14) (2.10.0)\n",
             "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in /usr/local/lib/python3.6/dist-packages (from markdown>=2.6.8->tensorboard<1.15.0,>=1.14.0->tensorflow==1.14) (3.4.0)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.6/dist-packages (from importlib-metadata; python_version < \"3.8\"->markdown>=2.6.8->tensorboard<1.15.0,>=1.14.0->tensorflow==1.14) (3.4.0)\n",
             "Requirement already satisfied: typing-extensions>=3.6.4; python_version < \"3.8\" in /usr/local/lib/python3.6/dist-packages (from importlib-metadata; python_version < \"3.8\"->markdown>=2.6.8->tensorboard<1.15.0,>=1.14.0->tensorflow==1.14) (3.7.4.3)\n",
-            "Installing collected packages: tensorflow-estimator, keras-applications, tensorboard, tensorflow\n",
-            "  Found existing installation: tensorflow-estimator 2.4.0\n",
-            "    Uninstalling tensorflow-estimator-2.4.0:\n",
-            "      Successfully uninstalled tensorflow-estimator-2.4.0\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.6/dist-packages (from importlib-metadata; python_version < \"3.8\"->markdown>=2.6.8->tensorboard<1.15.0,>=1.14.0->tensorflow==1.14) (3.4.0)\n",
+            "Installing collected packages: tensorboard, keras-applications, tensorflow-estimator, tensorflow\n",
             "  Found existing installation: tensorboard 2.4.1\n",
             "    Uninstalling tensorboard-2.4.1:\n",
             "      Successfully uninstalled tensorboard-2.4.1\n",
+            "  Found existing installation: tensorflow-estimator 2.4.0\n",
+            "    Uninstalling tensorflow-estimator-2.4.0:\n",
+            "      Successfully uninstalled tensorflow-estimator-2.4.0\n",
             "  Found existing installation: tensorflow 2.4.1\n",
             "    Uninstalling tensorflow-2.4.1:\n",
             "      Successfully uninstalled tensorflow-2.4.1\n",
@@ -122,7 +122,7 @@
       "source": [
         "env = gym.make('FrozenLake-v0')"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -133,6 +133,17 @@
       "source": [
         "## Q 테이블 학습 알고리즘 구현"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4KPXO88lILSJ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -167,9 +178,9 @@
         "    s = s1\n",
         "    if d == True :\n",
         "      break\n",
-        "rList.append(rAll)"
+        "  rList.append(rAll)"
       ],
-      "execution_count": 6,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -179,17 +190,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H14Ezlf7EYH8",
-        "outputId": "73f981b7-eb32-46ec-f17e-116bd5642ef4"
+        "outputId": "39383a18-aa65-4ae9-da04-a36312b293ae"
       },
       "source": [
         "print(\"Score over time : \" + str(sum(rList) / num_episodes))"
       ],
-      "execution_count": 7,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Score over time : 0.0005\n"
+            "Score over time : 0.3885\n"
           ],
           "name": "stdout"
         }
@@ -202,38 +213,49 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iy8cE0JqEcXG",
-        "outputId": "02e2a0df-d1e4-4511-cb8a-680c0a9d66ba"
+        "outputId": "c8e23976-f51f-4312-fe6d-9aa9ab028821"
       },
       "source": [
         "print(\"Final Q-Table Values\")\n",
         "print(Q)"
       ],
-      "execution_count": 8,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Final Q-Table Values\n",
-            "[[3.81617859e-01 4.56300724e-03 5.05936274e-03 5.51377092e-03]\n",
-            " [1.47868138e-03 3.36626746e-05 2.38691516e-04 4.97799979e-01]\n",
-            " [2.93269862e-03 2.88176928e-01 6.98035686e-04 2.82770109e-03]\n",
-            " [2.29847262e-04 1.51680278e-03 0.00000000e+00 2.85191458e-01]\n",
-            " [3.95434047e-01 0.00000000e+00 5.20598053e-03 0.00000000e+00]\n",
+            "[[8.74525868e-03 9.26740973e-03 5.45961971e-01 1.05749848e-02]\n",
+            " [1.81772635e-04 1.66397628e-03 1.33860447e-03 3.11093315e-01]\n",
+            " [4.33512169e-03 4.56696290e-03 2.59479192e-03 1.44355515e-01]\n",
+            " [1.78679679e-03 1.43812642e-03 1.44192533e-03 1.18595815e-01]\n",
+            " [6.03363159e-01 1.22109636e-03 2.38760705e-04 9.72185518e-03]\n",
             " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-            " [1.00533745e-01 1.17089540e-05 2.00155853e-05 1.67241515e-04]\n",
+            " [7.93781519e-04 3.58629122e-05 1.37071034e-01 1.28856201e-04]\n",
             " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-            " [0.00000000e+00 0.00000000e+00 0.00000000e+00 7.04401695e-01]\n",
-            " [0.00000000e+00 7.96477914e-01 0.00000000e+00 0.00000000e+00]\n",
-            " [3.59656470e-01 3.46727079e-04 2.11473149e-04 4.58843914e-04]\n",
+            " [6.14952429e-04 1.68114892e-04 5.39202010e-03 3.70400029e-01]\n",
+            " [2.46863852e-04 6.89950331e-01 1.81725598e-03 8.39875516e-04]\n",
+            " [1.89043565e-01 1.85626535e-05 0.00000000e+00 1.32453438e-04]\n",
             " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
             " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-            " [0.00000000e+00 0.00000000e+00 9.60223597e-01 5.06315969e-03]\n",
-            " [0.00000000e+00 0.00000000e+00 9.97632109e-01 0.00000000e+00]\n",
+            " [3.40907952e-04 2.08672525e-03 9.45567713e-01 2.42866302e-03]\n",
+            " [0.00000000e+00 0.00000000e+00 9.97608419e-01 0.00000000e+00]\n",
             " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]]\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iWFku4JpK1MC"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
